Adicionando implementação para a funcionalidade de pegar voos por data